<resources>
    <string name="app_name">LoginAndSignUpPage</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="continue_as_guest">Continue As Guest</string>
    <string name="continue_ahead">Continue</string>
    <string name="chatc">ChatC</string>
    <string name="notification_channel">chatC</string>
</resources>